--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <body>
     <div id="buttons">
         <button class="button-camera">Open Camera</button>
-        <button class="button-message">Open Gallery</button>
-        <button class="button-call">Open Camera Or Gallery</button>
+        <button class="button-gallery">Open Gallery</button>
+        <button class="button-camera-or-gallery">Open Camera Or Gallery</button>
+        <button class="button-camera-with-card-overlay">Open Camera With Card Overlay</button>
+        <button class="button-call">Make a call</button>
+        <button class="button-sms">Open SMS</button>
+        <button class="button-location">Determine Location</button>
+        <button class="button-email">Open Email</button>
     </div>
 
     <script src="./script.js"></script>
