Added import contact button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button class="button-sms">Open SMS</button>
         <button class="button-location">Determine Location</button>
         <button class="button-email">Open Email</button>
+        <button class="button-contact">Import Contact</button>
     </div>
 
     <script src="./script.js"></script>
